[metadata]
name = batchpr
version = attr:batchpr.__version__
description = Easy automated pull requests to GitHub repositories
long_description = file:README.rst
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD
url = https://github.com/astrofrog/batchpr
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
python_requires = >= 3.6
install_requires =
    requests
    pygithub
    termcolor

[flake8]
# E501: line too long
ignore = E501
